--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -14,6 +14,10 @@ input {
     font-size: 20px;
     border-radius: 4px;
 }
+input[type=email], input[type=password]{
+    padding-left: 35px;
+    padding-right: 10px;
+}
 .title {
     text-align: center;
     font-family: jost-regular;
@@ -38,25 +42,40 @@ input {
     text-align: center;
 }
 .passwordInputLabelContainer{
-    width: 430px;
+    width: 450px;
 }
-.cp{
+#CE{
     background-color: white;
     background-image: url('../../images/emailInput.png');
-    background-position: 10px 10px;
+    background-position: 0px 7.5px;
     background-repeat: no-repeat;
+    background-size: auto 25px;
+}
+#CP {
+    background-color: white;
+    background-image: url('../../images/passwordInput.png');
+    background-position: 4px 7.5px;
+    background-repeat: no-repeat;
+    background-size: auto 25px;
 }
 .submitButton{
-    background-color: navy;
+    background-color: rgb(0, 0, 158);
     color: white;
     border-radius: 15px;
     border-width: 5px;
     border-color: transparent;
     width: 350px;
     height: 40px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: jost-medium;
-   vertical-align: middle;
+    box-shadow: 0 6px #999;
+}
+.submitButton:hover{
+    background-color: rgb(49, 49, 210);
+}
+.submitButton:active{
+    transform: translateY(4px);
+    box-shadow: 0 1px #666;
 }
 @font-face {
     font-family: jost-regular;
