--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -45,6 +45,7 @@ input {
     background-image: url('../../images/emailInput.png');
     background-position: 10px 10px;
     background-repeat: no-repeat;
+    border-width: 0px;
 }
 .submitButton{
     background-color: navy;
@@ -56,7 +57,7 @@ input {
     height: 40px;
     font-size: 25px;
     font-family: jost-medium;
-   vertical-align: middle;
+    vertical-align: middle;
 }
 @font-face {
     font-family: jost-regular;
