--- a/pages/management/management.css
+++ b/pages/management/management.css
@@ -1,4 +1,34 @@
-div{
+#space{
     width: 100%;
     height: 100%;
+    text-align: center;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    min-width: 150px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 200px;
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: none;
+}
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+    display: block;
 }
