--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -3,21 +3,64 @@
     padding: 0px;
     
 }
+body{
+    background-color: white;
+}
 header {
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
+    background-color: rgb(0, 0, 91);
+    color: white;
+    
 }
 input {
     height: 40px;
     width: 400px;
     font-size: 20px;
-    border-radius: 4px;
+}
+input[type=email], input[type=password]{
+    padding-left: 35px;
+    padding-right: 10px;
+    transition: 0.25s;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+}
+input[type=email]:focus,
+input[type=password]:focus {
+    padding-left: 35px;
+    padding-right: 10px;
+    border-bottom-width: 4px;
+    border-bottom-color:rgb(0, 0, 158);
+    border-bottom-style: solid;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    outline: none;
 }
 .title {
     text-align: center;
     font-family: jost-regular;
-    font-size: 45px;
+    font-size: 50px;
+}
+.subTitle{
+    font-size: 25px;
+    margin-top: -10px;
+}
+.headerLinksContainer{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    font-size: 25px;
+    margin-top: 10px;
+    text-decoration: none;
+    background-color: white;
+}
+a{
+    text-decoration: none;
+    color: black;
+    font-family: jost-light;
 }
 .mainContentContainer{
     display: flex;
@@ -38,25 +81,40 @@ input {
     text-align: center;
 }
 .passwordInputLabelContainer{
-    width: 430px;
+    width: 450px;
 }
-.cp{
+#CE{
     background-color: white;
-    background-image: url('../../images/emailInput.png');
-    background-position: 10px 10px;
+    background-image: url("../../images/emailInput.png");
+    background-position: 0px 7.5px;
     background-repeat: no-repeat;
+    background-size: auto 25px;
+}
+#CP{
+    background-color: white;
+    background-image: url('../../images/passwordInput.png');
+    background-position: 4px 7.5px;
+    background-repeat: no-repeat;
+    background-size: auto 25px;
 }
 .submitButton{
-    background-color: navy;
+    background-color: rgb(0, 0, 158);
     color: white;
     border-radius: 15px;
     border-width: 5px;
     border-color: transparent;
     width: 350px;
     height: 40px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: jost-medium;
-   vertical-align: middle;
+    box-shadow: 0 6px #999;
+}
+.submitButton:hover{
+    background-color: rgb(49 49 210);
+}
+.submitButton:active{
+    transform: translateY(4px);
+    box-shadow: 0 1px #666;
 }
 @font-face {
     font-family: jost-regular;
@@ -65,4 +123,16 @@ input {
 @font-face {
     font-family: jost-medium;
     src: url(../../Fonts/Jost/static/Jost-Medium.ttf);
+}
+@font-face {
+    font-family: jost-thin;
+    src: url(../../Fonts/Jost/static/Jost-Thin.ttf);
+}
+@font-face {
+    font-family: jost-semiBold;
+    src: url(../../Fonts/Jost/static/Jost-SemiBold.ttf);
+}
+@font-face {
+    font-family: jost-light;
+    src: url(../../Fonts/Jost/static/Jost-Light.ttf);
 }
