--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -34,6 +34,34 @@ header {
     background-color: #23abff;
     color: white;
 }
+.mainContentContainer{
+    margin-top: 30px;
+    margin-left: 25%;
+    margin-right: 25%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+.mainContentContainer h1{
+    text-align: center;
+    font-family: rubik-bold;
+    font-size: 35px;
+    
+}
+.mainContentContainer p{
+    font-size: 25px;
+    font-family: rubik-light;
+    border-left-color: #23abff;
+    border-width: 0px;
+    border-left-width: 5px;
+    border-style: solid;
+    padding-left: 15px;
+}
+
+.orangeText{
+    color: rgb(255, 111, 0);
+    font-weight: bold;
+}
 a{
     text-decoration: none;
     color: rgb(0, 0, 23);
@@ -70,17 +98,7 @@ input[type=password]:focus {
     border-left-style: hidden;
     outline: none;
 } */
-/* .mainContentContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 50px;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
+/*
 .emailInputContainer{
     align-self: center;
 }
@@ -124,6 +142,7 @@ input[type=password]:focus {
     transform: translateY(4px);
     box-shadow: 0 1px #666;
 } */
+/* Jost Fonts */
 @font-face {
     font-family: jost-regular;
     src: url(../../Fonts/Jost/static/Jost-Regular.ttf);
@@ -141,6 +160,27 @@ input[type=password]:focus {
     src: url(../../Fonts/Jost/static/Jost-SemiBold.ttf);
 }
 @font-face {
+    font-family: jost-bold;
+    src: url(../../Fonts/Jost/static/Jost-Bold.ttf);
+}
+@font-face {
     font-family: jost-light;
     src: url(../../Fonts/Jost/static/Jost-Light.ttf);
+}
+/* Rubik Fonts */
+@font-face {
+    font-family: rubik-regular;
+    src: url(../../Fonts/rubik/static/Rubik-Regular.ttf);
+}
+@font-face {
+    font-family: rubik-light;
+    src: url(../../Fonts/rubik/static/Rubik-Light.ttf);
+}
+@font-face {
+    font-family: rubik-bold;
+    src: url(../../Fonts/rubik/static/Rubik-Bold.ttf);
+}
+@font-face {
+    font-family: rubik-semiBold;
+    src: url(../../Fonts/rubik/static/Rubik-SemiBold.ttf);
 }
