--- a/pages/comparator/compare.css
+++ b/pages/comparator/compare.css
@@ -1,10 +1,10 @@
-.state{
+.states{
     text-decoration: underline;
 }
 .list{
     list-style: none;
 }
 .flexbox{
-    display: flex;
-    justify-content: space-evenly;
+    display:flex;
+    justify-content: space-between;
 }
