--- a/pages/comparator/compare.css
+++ b/pages/comparator/compare.css
@@ -8,3 +8,12 @@
     display:flex;
     justify-content: space-between;
 }
+.left{
+    padding-left: 2%;
+}
+.right {
+    padding-right: 2%;
+}
+p{
+    font-size:20px;
+}
