--- a/pages/comparator/compare.css
+++ b/pages/comparator/compare.css
@@ -3,10 +3,8 @@
     padding: 0px;
 
 }
-
 body {
-    background-color: whitesmoke;
-
+    background-color: white;
 }
 header {
     width: 100%;
@@ -24,12 +22,10 @@ footer {
     font-family: jost-regular;
     font-size: 50px;
 }
-
 .subTitle {
     font-size: 25px;
     margin-top: -10px;
 }
-
 .headerLinksContainer {
     display: flex;
     justify-content: center;
@@ -59,16 +55,20 @@ a {
     color: rgb(0, 0, 23);
     font-family: jost-semiBold;
 }
-
 a:hover {
     text-decoration: underline;
 }
-
+.right a:hover{
+    color: rgb(255, 128, 0);
+}
 #underlineLink {
     text-decoration: underline;
 }
 .states{
     text-decoration: underline;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: rubik-bold;
 }
 .list{
     list-style: none;
@@ -76,29 +76,86 @@ a:hover {
 .flexbox{
     display:flex;
     justify-content: space-between;
+    text-align: center;
 }
 .left{
-    margin-left: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: #9bdfff
     /* border: 1px solid black; */
 }
 .right {
-    margin-right: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: rgb(255, 216, 139)
     /* border: 1px solid black; */
 }
 p{
     font-size:20px;
 }
-
 .flexmid{
+    margin-top: 50px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    /* border: 1px solid black; */
+    align-content: flex-start;
 }
-/* .comp{
-    align-self: flex-start;
-} */
+.flexmid h1{
+    font-family: Jost-Bold;
+}
+.flexmid p{
+    font-family: rubik-regular;
+}
+input {
+    height: 40px;
+    width: 400px;
+    font-size: 20px;
+}
 
+input[type=text]{
+    padding-left: 5px;
+    transition: 0.25s;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    margin-bottom: 20px;
+}
+
+input[type=text]:focus{
+    padding-left: 5px;
+    border-bottom-width: 4px;
+    border-bottom-color: rgb(0, 0, 158);
+    border-bottom-style: solid;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    outline: none;
+}
+#wantedState:focus{
+    border-bottom-color:rgb(255, 128, 0)
+}
+#submit {
+    background-color: rgb(0, 0, 175);
+    color: white;
+    border-radius: 15px;
+    border-width: 5px;
+    border-color: transparent;
+    width: 350px;
+    height: 40px;
+    font-size: 20px;
+    font-family: jost-medium;
+    box-shadow: 0 6px #999;
+    margin-bottom: 10px;
+}
+
+#submit:hover {
+    background-color: rgb(49 49 210);
+}
+
+#submit:active {
+    transform: translateY(4px);
+    box-shadow: 0 1px #666;
+}
 @font-face {
     font-family: jost-regular;
     src: url(../../Fonts/Jost/static/Jost-Regular.ttf);
